# vibe-check-dc604

./: .gitignore  README.md
assessment-1/: package-lock.json  server.js
assessment-1/server/controllers/: auth.controller.js
assessment-1/server/middleware/: logFormatter.js
assessment-1/server/models/: users.js
assessment-2/: package.json
assessment-2/src/: app.js
assessment-2/tests/: app.test.js
attacker-payload/: README.md  payload.js  server.py
lab1/: reset-assessment-1.sh
lab1/assessment-1/: README.md  package.json
lab1/assessment-1/server/config/: config.js
lab1/assessment-1/server/routes/: auth.routes.js  (+1 more)
lab1/assessment-2/: .env.sample  .eslintrc.json  README.md
lab1/assessment-2/scripts/: init.sh
lab1/assessment-2/src/: utils.js
lab2/: README.md  pyproject.toml
lab2/harness/: __init__.py  __main__.py  providers.py  safety.py  ui.py
lab2/repos/assessment-0/: LICENSE  README.md  package.json
lab2/repos/assessment-0/src/: app.js
lab2/repos/assessment-1/: AGENTS.md  LICENSE  README.md  package.json
lab2/repos/assessment-1/src/: app.js
lab2/repos/assessment-2/: AGENTS.md  LICENSE  README.md  package.json
lab2/repos/assessment-2/src/: app.js
lab2/repos/assessment-3/: AGENTS.md  LICENSE  README.md  package.json
lab2/repos/assessment-3/src/: app.js
lab2/repos/assessment-4/: AGENTS.md  LICENSE  README.md  package.json
lab2/repos/assessment-4/scripts/: register.py
lab2/repos/assessment-4/src/: app.js
lab2/repos/assessment-5/: AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json
lab2/repos/assessment-5/src/: app.js
(+3 files in other folders)
